# SFML

./: .gitignore  CMakeLists.txt
src/: BoardRenderer.cpp  BoardRenderer.hpp  ChessUtils.cpp  ChessUtils.hpp  GameData.hpp  GameLogic.cpp  GameLogic.hpp  GameLoop.cpp  GameLoop.hpp  GameStateUpdater.cpp  GameStateUpdater.hpp  InputHandler.cpp  InputHandler.hpp  NetworkClient.cpp  NetworkClient.hpp  SharedState.hpp  main.cpp
